// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> should render placeholders if forced to 1`] = `
<Image
  alt={null}
  animating={true}
  backgroundColor="#f2f2f2"
  className=""
  forcePlaceholder={true}
  highestResolutionLoaded={[Function]}
  onError={null}
  onLoad={null}
  ratio={null}
  resolutions={
    Array [
      Object {
        "blur": 2,
        "height": 50,
        "width": 50,
      },
      Object {
        "height": 440,
        "width": 440,
      },
    ]
  }
  src="foo/bar"
  transition={null}
>
  <div
    className="css-326p2s "
  />
</Image>
`;

exports[`<Image /> should render placeholders if src is null 1`] = `
<Image
  alt={null}
  animating={true}
  backgroundColor="#f2f2f2"
  className=""
  forcePlaceholder={false}
  highestResolutionLoaded={[Function]}
  onError={null}
  onLoad={null}
  ratio={null}
  resolutions={
    Array [
      Object {
        "blur": 2,
        "height": 50,
        "width": 50,
      },
      Object {
        "height": 440,
        "width": 440,
      },
    ]
  }
  src="foo/bar"
  transition={null}
>
  <div
    className="css-326p2s "
  >
    <img
      alt={null}
      className="css-f45h63"
      data-test-id="image"
      role="presentation"
      src="foo/bar?w=440&h=440&q=70&zc=resize&fillc=FFFFFF"
      style={Object {}}
    />
  </div>
</Image>
`;
